# agora

./: .env.example  .gitignore  Makefile  README.md  Tiltfile  docker-compose.yml  go.work  go.work.sum  pom.xml
chaos/: run.sh  ws-node-kill-test.py
chaos/experiments/: CATALOG.md
contracts/pacts/: web-bff-catalog-service.json
contracts/proto/: ratelimit.proto
docs/: CONVENTIONS.md  PLAN.md
docs/design/: OVERVIEW.md
docs/drills/: DRILL-LOG.md  README.md
docs/link-service/: design.md
docs/rate-limiter/: design.md
docs/templates/: adr.md  design-doc.md  estimation-worksheet.md  service-readme.md
infra/debezium/: catalog-outbox.json  order-outbox.json  register.sh
infra/k8s/: k3d-config.yaml
infra/observability/: agora-provider.yaml
lld-lab/: NUMBERS.md  README.md  pom.xml
load/: NUMBERS.md
load/scenarios/: link-baseline.js  rate-limiter-saturation.js
platform/platform-idempotency/: pom.xml
platform/platform-outbox/: pom.xml
platform/platform-snowflake/: pom.xml
platform/platform-testing/: pom.xml
services/analytics-stream/: main.py  pyproject.toml
services/catalog-service/: pom.xml
services/chat-service/: pom.xml
services/edge-gateway/: README.md  pom.xml
services/feed-service/: pom.xml
services/identity-service/: README.md  pom.xml
services/inventory-service/: pom.xml
services/link-service/: Dockerfile  README.md  go.mod  go.sum
services/location-service/: go.mod
services/notification-service/: pom.xml
services/order-service/: pom.xml
services/payment-ledger-service/: pom.xml
services/rate-limiter/: Dockerfile  (+4 more)
(+128 files in other folders)
